Added present trade for nitwits. Added candy cane: an eatable sword. Tweaked the particles on the present. Updated forge.

--- a/src/main/resources/assets/festive_times/lang/en_us.json
+++ b/src/main/resources/assets/festive_times/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.festive_times.wrapping_paper": "Wrapping Paper",
+  "item.festive_times.candy_cane": "Candy Cane",
   "block.festive_times.present": "Present",
   "itemGroup.festive_times_tab": "Festive Times"
 }
